implementing consumes - bakend